--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://youngerfill.github.io/demo-state/",
   "name": "demo-rhsh",
   "version": "0.1.0",
   "private": true,
@@ -45,6 +46,7 @@
     "react-dev-utils": "^6.0.4",
     "react-dom": "^16.5.2",
     "react-hyperscript-helpers": "^2.0.0",
+    "react-router-dom": "^4.3.1",
     "resolve": "1.8.1",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.0",
